src/objects/Partner_Organisation_Event__c.object
<CustomObject>
    <description>A session where a partner organisation did something</description>
    <fields>
        <fullName>Dataloader__c</fullName>
        <label>Dataloader</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>How_did_you_watch_the_videos__c</fullName>
        <label>How did you watch the videos?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DVD</fullName>
                </value>
                <value>
                    <fullName>Downloaded Videos</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Partner booklet</fullName>
                </value>
                <value>
                    <fullName>Other (please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offline_Event_Date__c</fullName>
        <label>Offline Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_please_specify__c</fullName>
        <label>Other (please specify)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Count__c</fullName>
        <label>Participant Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation__c</fullName>
        <label>Partner Organisation</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipName>Organisation_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Post Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Partner Organisation Event</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Organisation Events</pluralLabel>
    <recordTypes>
        <fullName>Partner_Offline_Event</fullName>
        <active>true</active>
        <label>Partner Offline Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Online_Event</fullName>
        <active>true</active>
        <label>Partner Online Event</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>